Fix vertical text alignment on Safari: #193

--- a/src/SeqViz.css
+++ b/src/SeqViz.css
@@ -55,6 +55,7 @@
 .la-vz-selection-edge {
   fill: black;
   stroke: black;
+  shape-rendering: geometricPrecision;
 }
 
 .la-vz-cut-site {
